5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4179/executions/1667_2968.log
== TEST (2019-04-16 16:31:42) 
-- CODE:
l=input("lanche ou salgado:? L/S")
qt=float(int(input("Quantidade de salgados:?")))
qtr=float(int(input("Quantidade de refrigerantes:?")))
if (l="L"):
	lanche=5.00
	salgado=3.50
	refri=4.00
	preco=2*qt+qtr
	print(preco)
else:
	
-- ERROR:
File "XXXX", line 4
    if (l="L"):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:31:56) 
-- CODE:
l=input("lanche ou salgado:? L/S")
qt=float(int(input("Quantidade de salgados:?")))
qtr=float(int(input("Quantidade de refrigerantes:?")))
if (l="L"):
	lanche=5.00
	salgado=3.50
	refri=4.00
	preco=2*qt+qtr
	print(preco)
else:
	
-- ERROR:
File "XXXX", line 4
    if (l="L"):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:32:18) 
-- CODE:
l=input("lanche ou salgado:? L/S")
qt=float(int(input("Quantidade de salgados:?")))
qtr=float(int(input("Quantidade de refrigerantes:?")))
if (l="L"):
	lanche=5.00
	salgado=3.50
	refri=4.00
	preco=2*lanche+refri
	print(preco)
else:
	
-- ERROR:
File "XXXX", line 4
    if (l="L"):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:32:25) 
-- CODE:
l=input("lanche ou salgado:? L/S")
qt=float(int(input("Quantidade de salgados:?")))
qtr=float(int(input("Quantidade de refrigerantes:?")))
if (l=="L"):
	lanche=5.00
	salgado=3.50
	refri=4.00
	preco=2*lanche+refri
	print(preco)
else:
	
-- ERROR:
File "XXXX", line 12
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:33:04) 
-- CODE:
l=input("lanche ou salgado:? L/S")
qt=float(int(input("Quantidade de salgados:?")))
qtr=float(int(input("Quantidade de refrigerantes:?")))
if (l=="L"):
	lanche=5.00
	salgado=3.50
	refri=4.00
	preco=2*lanche+refri
	print(preco)
else:
	print(S)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print(S)
NameError: name 'S' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:33:23) 
-- CODE:
l=input("lanche ou salgado:? L/S")
qt=float(int(input("Quantidade de salgados:?")))
qtr=float(int(input("Quantidade de refrigerantes:?")))
if (l=="L"):
	lanche=5.00
	salgado=3.50
	refri=4.00
	preco=2*lanche+refri
	print(preco)
else:
	print(S)
	
-- EXECUTION TIME:
0.133932
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1667/2968/main.py", line 11, in <module>
    print(S)
NameError: name 'S' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:34:30) 
-- CODE:
l=input("lanche ou salgado:? L/S ")
qt=float(input("Quantidade de salgados:?"))
qtr=float(input("Quantidade de refrigerantes:?"))
if (l=="L"):
	print(2*qt+qtr)
else:
	print(S)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(S)
NameError: name 'S' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:34:54) 
-- CODE:
l=input("lanche ou salgado:? L/S ")
qt=float(input("Quantidade de salgados:?"))
qtr=float(input("Quantidade de refrigerantes:?"))
if (l=="L"):
	print((2*qt)+qtr)
else:
	print(S)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(S)
NameError: name 'S' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:35:30) 
-- CODE:
l=input("lanche ou salgado:? L/S ")
qt=float(input("Quantidade de salgados:?"))
qtr=float(input("Quantidade de refrigerantes:?"))
if (l=="L"):
	p=2*qt+qtr
	print(p)
else:
	print(S)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(S)
NameError: name 'S' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:36:34) 
-- CODE:
l=input("lanche ou salgado:? L/S ")
qt=float(input("Quantidade de salgados:?"))
qtr=float(input("Quantidade de refrigerantes:?"))
if (l=="L"):
	p=2*(qt*5)+qtr*4
	print(p)
else:
	print(S)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(S)
NameError: name 'S' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:37:09) 
-- CODE:
l=input("lanche ou salgado:? L/S ")
qt=float(input("Quantidade de salgados:?"))
qtr=float(input("Quantidade de refrigerantes:?"))
if (l=="L"):
	p=(qt*5)+qtr*4
	print(p)
else:
	print(S)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(S)
NameError: name 'S' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:37:17) 
-- CODE:
l=input("lanche ou salgado:? L/S ")
qt=float(input("Quantidade de salgados:?"))
qtr=float(input("Quantidade de refrigerantes:?"))
if (l=="L"):
	p=(qt*5)+qtr*4
	print(p)
else:
	print(S)
	
-- EXECUTION TIME:
0.145459
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1667/2968/main.py", line 8, in <module>
    print(S)
NameError: name 'S' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:37:27) 
-- CODE:
l=input("lanche ou salgado:? L/S ")
qt=float(input("Quantidade de salgados:?"))
qtr=float(input("Quantidade de refrigerantes:?"))
if (l=="L"):
	p=(qt*5)+qtr*4
	print(p)
else:
	print(S)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(S)
NameError: name 'S' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:38:20) 
-- CODE:
l=input("lanche ou salgado:? L/S ")
qt=float(input("Quantidade de salgados:?"))
qtr=float(input("Quantidade de refrigerantes:?"))
if (l=="L"):
	p=(qt*5)+qtr*4
	print(float((p))
else:
	print(S)
	
-- ERROR:
File "XXXX", line 7
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:38:36) 
-- CODE:
l=input("lanche ou salgado:? L/S ")
qt=float(input("Quantidade de salgados:?"))
qtr=float(input("Quantidade de refrigerantes:?"))
if (l=="L"):
	p=(qt*5)+qtr*4
	print(p)
else:
	print(S)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(S)
NameError: name 'S' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:38:48) 
-- CODE:
l=input("lanche ou salgado:? L/S ")
qt=float(input("Quantidade de salgados:?"))
qtr=float(input("Quantidade de refrigerantes:?"))
if (l=="L"):
	p=(qt*5)+qtr*4
	print(p)
else:
	print(S)
	
-- EXECUTION TIME:
0.155228
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1667/2968/main.py", line 8, in <module>
    print(S)
NameError: name 'S' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:39:52) 
-- CODE:
l=input("lanche ou salgado:? L/S ")
qt=float(input("Quantidade de salgados:?"))
qtr=float(input("Quantidade de refrigerantes:?"))
if (l=="L"):
	p=(qt*5.00)+qtr*4.00
	print(p)
else:
	print(S)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(S)
NameError: name 'S' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:40:03) 
-- CODE:
l=input("lanche ou salgado:? L/S ")
qt=float(input("Quantidade de salgados:?"))
qtr=float(input("Quantidade de refrigerantes:?"))
if (l=="L"):
	p=(qt*5.00)+qtr*4.00
	print(p)
else:
	print(S)
	
-- EXECUTION TIME:
0.22257
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1667/2968/main.py", line 8, in <module>
    print(S)
NameError: name 'S' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:41:35) 
-- CODE:
l=input("lanche ou salgado:? L/S ")
qt=float(input("Quantidade de lanches:?"))
qtr=float(input("Quantidade de refrigerantes:?"))
lan=5.00
sal=3.50
refri=4.00

if (l=="L"):
	print(qt*lan+refri)
else:
	print(S)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print(S)
NameError: name 'S' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:41:42) 
-- CODE:
l=input("lanche ou salgado:? L/S ")
qt=float(input("Quantidade de lanches:?"))
qtr=float(input("Quantidade de refrigerantes:?"))
lan=5.00
sal=3.50
refri=4.00

if (l=="L"):
	print(qt*lan+refri)
else:
	print(S)
	
-- EXECUTION TIME:
0.132768
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1667/2968/main.py", line 11, in <module>
    print(S)
NameError: name 'S' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:42:17) 
-- CODE:
l=input("lanche ou salgado:? L/S ")
qt=float(input("Quantidade de lanches:?"))
qtr=float(input("Quantidade de refrigerantes:?"))
lan=5.00
sal=3.50
refri=4.00

if (l=="L"):
	print(round(qt*lan+refri,2))
else:
	print(S)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print(S)
NameError: name 'S' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:42:55) 
-- CODE:
l=input("lanche ou salgado:? L/S ")
qt=float(input("Quantidade de lanches:?"))
qtr=float(input("Quantidade de refrigerantes:?"))
lan=5.00
sal=3.50
refri=4.00
if (l=="L"):
	print(round(qt*lan+refri,2))
else:
	print(S)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(S)
NameError: name 'S' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:43:04) 
-- CODE:
l=input("lanche ou salgado:? L/S ")
qt=float(input("Quantidade de lanches:?"))
qtr=float(input("Quantidade de refrigerantes:?"))
lan=5.00
sal=3.50
refri=4.00
if (l=="L"):
	print(round(qt*lan+refri,2))
else:
	print(S)
	
-- EXECUTION TIME:
0.20232
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1667/2968/main.py", line 10, in <module>
    print(S)
NameError: name 'S' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:43:47) 
-- CODE:
l=input("lanche ou salgado:? L/S ")
qt=float(input("Quantidade de lanches:?"))
qtr=float(input("Quantidade de refrigerantes:?"))
lan=float(5.00)
sal=float(3.50)
refri=float(4.00)
if (l=="L"):
	print(round(qt*lan+refri,2))
else:
	print(S)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(S)
NameError: name 'S' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:45:12) 
-- CODE:
l=input("lanche ou salgado:? L/S ")
qt=float(input("Quantidade de lanches:?"))
qtr=float(input("Quantidade de refrigerantes:?"))
lan=float(5.00)
sal=float(3.50)
refri=float(4.00)
if (l=="L"):
	print(round(qt*lan+refri,2))
else:
	print(S)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(S)
NameError: name 'S' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:45:18) 
-- CODE:
l=input("lanche ou salgado:? L/S ")
qt=float(input("Quantidade de lanches:?"))
qtr=float(input("Quantidade de refrigerantes:?"))
lan=float(5.00)
sal=float(3.50)
refri=float(4.00)
if (l=="L"):
	print(round(qt*lan+refri,2))
else:
	print(S)
	
-- EXECUTION TIME:
0.135209
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1667/2968/main.py", line 10, in <module>
    print(S)
NameError: name 'S' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:45:22) 
-- CODE:
l=input("lanche ou salgado:? L/S ")
qt=float(input("Quantidade de lanches:?"))
qtr=float(input("Quantidade de refrigerantes:?"))
lan=float(5.00)
sal=float(3.50)
refri=float(4.00)
if (l=="L"):
	print(round(qt*lan+refri,2))
else:
	print(S)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(S)
NameError: name 'S' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:46:12) 
-- CODE:
l=input("lanche ou salgado:? L/S ")
qt=float(input("Quantidade de lanches:?"))
qtr=float(input("Quantidade de refrigerantes:?"))
if (l=="L"):
	la=float(5.00)
	refri=float(4.00)
	print(round(qt*lan+refri,2))
else:
	print(S)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(S)
NameError: name 'S' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:46:48) 
-- CODE:
l=input("lanche ou salgado:? L/S ")
qt=float(input("Quantidade de lanches:?"))
qtr=float(input("Quantidade de refrigerantes:?"))
if (l=="L"):
	la=float(5.00)
	refri=float(4.00)
	print(round((qt*lan+refri),2))
else:
	print(S)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(S)
NameError: name 'S' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:47:01) 
-- CODE:
l=input("lanche ou salgado:? L/S ")
qt=float(input("Quantidade de lanches:?"))
qtr=float(input("Quantidade de refrigerantes:?"))
if (l=="L"):
	lan=float(5.00)
	refri=float(4.00)
	print(round((qt*lan+refri),2))
else:
	print(S)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(S)
NameError: name 'S' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:47:07) 
-- CODE:
l=input("lanche ou salgado:? L/S ")
qt=float(input("Quantidade de lanches:?"))
qtr=float(input("Quantidade de refrigerantes:?"))
if (l=="L"):
	lan=float(5.00)
	refri=float(4.00)
	print(round((qt*lan+refri),2))
else:
	print(S)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(S)
NameError: name 'S' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:47:23) 
-- CODE:
l=input("lanche ou salgado:? L/S ")
qt=float(input("Quantidade de lanches:?"))
qtr=float(input("Quantidade de refrigerantes:?"))
if (l=="L"):
	lan=float(5.000)
	refri=float(4.000)
	print(round((qt*lan+refri),2))
else:
	print(S)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(S)
NameError: name 'S' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:48:44) 
-- CODE:
l=input("lanche ou salgado:? L/S ")
qt=float(int(input("Quantidade de lanches:?")))
qtr=float(int(input("Quantidade de refrigerantes:?")))
if (l=="L"):
	lan=float(5.00)
	refri=float(4.00)
	print(round(qt*lan+refri),2)
else:
	print(S)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(S)
NameError: name 'S' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:48:54) 
-- CODE:
l=input("lanche ou salgado:? L/S ")
qt=float(int(input("Quantidade de lanches:?")))
qtr=float(int(input("Quantidade de refrigerantes:?")))
if (l=="L"):
	lan=float(5.00)
	refri=float(4.00)
	print(round(qt*lan+refri,2)
else:
	print(S)
	
-- ERROR:
File "XXXX", line 8
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:49:09) 
-- CODE:
l=input("lanche ou salgado:? L/S ")
qt=float(int(input("Quantidade de lanches:?")))
qtr=float(int(input("Quantidade de refrigerantes:?")))
if (l=="L"):
	lan=float(5.00)
	refri=float(4.00)
	print(round(qt*lan+refri,2))
else:
	print(S)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(S)
NameError: name 'S' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:49:20) 
-- CODE:
l=input("lanche ou salgado:? L/S ")
qt=float(int(input("Quantidade de lanches:?")))
qtr=float(int(input("Quantidade de refrigerantes:?")))
if (l=="L"):
	lan=float(5.00)
	refri=float(4.00)
	print(round(qt*lan+refri,2))
else:
	print(S)
	
-- EXECUTION TIME:
0.234867
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1667/2968/main.py", line 9, in <module>
    print(S)
NameError: name 'S' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:49:51) 
-- CODE:
l=input("lanche ou salgado:? L/S ")
qt=float(int(input("Quantidade de lanches:?")))
qtr=float(int(input("Quantidade de refrigerantes:?")))
if (l=="L"):
	lan=float(int(5.00))
	refri=float(int(4.00))
	print(round(qt*lan+refri,2))
else:
	print(S)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(S)
NameError: name 'S' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:50:21) 
-- CODE:
l=input("lanche ou salgado:? L/S ")
qt=float(int(input("Quantidade de lanches:?")))
qtr=float(int(input("Quantidade de refrigerantes:?")))
if (l=="L"):
	lan=5.00
	refri=4.00
	print(round(qt*lan+refri,2))
else:
	print(S)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(S)
NameError: name 'S' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:51:23) 
-- CODE:
l=input("lanche ou salgado:? L/S ")
qt=int(input("Quantidade de lanches:?"))
qtr=int(input("Quantidade de refrigerantes:?"))
if (l=="L"):
	lan=5.00
	refri=4.00
	print(round(qt*lan+qtr*refri,2))
else:
	print(S)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(S)
NameError: name 'S' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
